# eventsourcing

./: .gitignore  README.md  docker-compose.yml  main.py  ocr_example.py  pyproject.toml
eventsourcing/: __init__.py  command_handler.py  config.py  fastapi_utils.py  interfaces.py  log_config.py  middleware.py  processor.py  query_handler.py  router.py
eventsourcing/processor/: at_least_once_processor.py  at_most_once_processor.py  base.py  batch_processor.py
eventsourcing/pubsub/: base.py  in_memory.py
eventsourcing/serializers/: avro_serializer.py  base.py  json_serializer.py  protobuf_serializer.py  registry.py
eventsourcing/store/dedupe/: base.py  in_memory.py
eventsourcing/store/event_store/: base.py  in_memory.py  postgres.py  sqlite.py
eventsourcing/store/outbox/: base.py  in_memory.py
eventsourcing/store/read_model/: base.py  in_memory.py
tests/: conftest.py  test_at_least_once_processor.py  test_at_most_once_processor.py  test_backlog_eviction.py  test_command_query.py  test_concurrency.py  test_dead_stream_on_conflict.py  test_fastapi_integration.py  test_in_memory_event_store.py  test_logging.py  test_middleware.py  test_outbox.py  test_pipeline_serialization.py  test_processor.py  test_pubsub.py  test_read_model_store.py  test_router.py  test_serializers.py  test_sqlite_event_store.py
